--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-	"name": "henmalib.dev",
-	"type": "module",
-	"version": "0.1.0",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro check && astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/check": "^0.7.0",
-		"@astrojs/sitemap": "^3.2.1",
-		"@astrojs/tailwind": "^5.1.0",
-		"astro": "^4.11.5",
-		"astro-icon": "^1.1.0",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.5.3"
-	},
-	"devDependencies": {
-		"@catppuccin/tailwindcss": "^0.1.6",
-		"prettier": "^3.3.2",
-		"prettier-plugin-astro": "^0.14.0"
-	}
+  "name": "henmalib.dev",
+  "type": "module",
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/svelte": "^7.0.6",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^5.5.2",
+    "astro-icon": "^1.1.0",
+    "svelte": "^5.23.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
+  }
 }
